Tue Oct 15 15:07:45 2002  Manish Singh  <yosh@gimp.org>

	* gmodule/Makefile.am gobject/Makefile.am gthread/Makefile.am:
	add -DG_DISABLED_DEPRECATED

	* tests/gio-test.c tests/mainloop-test.c tests/string-test.c
	tests/testglib.c test/tree-test.c tests/unicode-collate.c
	tests/unicode-normalize.c: Deprecation cleanup

Mon Oct 14 15:51:05 2002  Owen Taylor  <otaylor@redhat.com>

	* glib/gdate.c (g_date_fill_parse_tokens): Fix a memory
	leak. (#94550, Sebastian Rittau)

Mon Oct 14 15:36:11 2002  Owen Taylor  <otaylor@redhat.com>

	* glib/gcompletion.[ch] (g_completion_complete): Make
	prefix argument const. (#91662, Gustavo Carneiro) 

Mon Oct 14 15:32:14 2002  Owen Taylor  <otaylor@redhat.com>
 
 	* tests/mainloop-test.c (adder_response): Fix a minor memory
 	leak.
 
Sat Oct 12 21:30:41 2002  Tim Janik  <timj@gtk.org>

	* merged up from glib-2-0:

        * glib/gstrfuncs.c (g_ascii_strtod): fix comment.
        (g_ascii_strtoull): new function, acting like strtoull(3) in the C
        locale.

        * glib/gscanner.[hc]: fix 32bit issues with integer parsing and
        support storing 64bit values in GTokenValue by
        using g_ascii_strtoull().

Sat Oct 12 12:34:22 2002  Soeren Sandmann  <sandmann@daimi.au.dk>

	* glib/gtree.c (g_tree_search), glib/gspawn.c
	(g_spawn_async_with_pipes): 

	Documentation fixes: #71778, Owen Taylor; #85095, Bill Janssen,
	Owen Taylor. 

Thu Oct 10 23:27:02 2002  Tim Janik  <timj@gtk.org>

        * glib/gscanner.c (g_scanner_msg_handler): if input_name is NULL,
        print out "<memory>" instead of completely skipping input specification
        and thusly loosing error line information.

Sun Sep 29 12:15:44 2002  Manish Singh  <yosh@gimp.org>

	* tests/mainloop-test.c: use gsize instead of int where appropriate
	(64-bit cleanliness fix)

2002-09-29  Tor Lillqvist  <tml@iki.fi>

	* configure.in: Instead of forcing -fnative-struct into CFLAGS
	when using gcc for Win32, check for gcc version 3.x which uses